fixed aspect ratio of widgets by removing gap property in main

--- a/repmak-website/src/App.css
+++ b/repmak-website/src/App.css
@@ -14,14 +14,19 @@ html, body { margin: 0; padding: 0; background: var(--bg-color); font-optical-si
 
 main {
     display: grid;
-    max-width: 1000px;
+    max-width: 1100px;
     margin: 0 auto;
     padding: 3rem;
-    gap: 1rem;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: min-content;
+    /*container-type: inline-size;*/
+    /*grid-auto-rows: calc((100cqw - 6rem - 3rem) / 4);*/
+
 }
 
 @media (max-width: 800px) {
-    main { grid-template-columns: repeat(2, 1fr); }
+    main {
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: calc((100cqw - 6rem - 3rem) / 4);
+    }
 }
