--- a/repmak-website/src/Widgets/Widget.css
+++ b/repmak-website/src/Widgets/Widget.css
@@ -2,17 +2,24 @@
 * { box-sizing: border-box; }
 a { text-decoration: none; }
 
+/* This is required to make gaps between widgets.
+We cannot use the gap property in main because it will affect the aspect ratio of widgets. */
+.widget-container {
+    padding: 0.75rem;
+    aspect-ratio: 1 / 1;
+}
+
 .widget {
     display: flex;
     flex-direction: column;
-    aspect-ratio: 1 / 1;
     border-radius: 30px;
     padding: 1.5rem;
     transition-duration: 0.3s;
-
     min-height: 0;
     min-width: 0;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .widget:hover {
@@ -22,14 +29,27 @@ a { text-decoration: none; }
 
 /* Sizing */
 
-.widget.wide { grid-column: span 2; aspect-ratio: 2 / 1; }
-.widget.extra-wide { grid-column: span 3; aspect-ratio: 3 / 1; }
-.widget.tall { grid-row: span 2; aspect-ratio: 1 / 2; }
-.widget.big { grid-column: span 2; grid-row: span 2; aspect-ratio: 1 / 1; }
+.widget-container.wide { grid-column: span 2; aspect-ratio: 2 / 1; }
+.widget-container.extra-wide { grid-column: span 3; aspect-ratio: 3 / 1; }
+.widget-container.tall { grid-row: span 2; aspect-ratio: 1 / 2; }
+.widget-container.big { grid-column: span 2; grid-row: span 2; aspect-ratio: 1 / 1; }
 
 @media (max-width: 800px) {
-    .widget.extra-wide { grid-column: span 2; aspect-ratio: 2 / 1; }
+    .widget-container.extra-wide { grid-column: span 2; aspect-ratio: 2 / 1; }
 }
+
+/*.widget.wide { grid-column: span 2; }*/
+/*.widget.extra-wide { grid-column: span 3; }*/
+/*.widget.tall { grid-row: span 2; }*/
+/*.widget.big { grid-column: span 2; grid-row: span 2; }*/
+
+/*@media (max-width: 800px) {*/
+/*    main {*/
+/*        grid-template-columns: repeat(2, 1fr);*/
+/*        grid-auto-rows: calc((100cqw - (1 * 1rem)) / 2);*/
+/*    }*/
+/*    .widget.extra-wide { grid-column: span 2; }*/
+/*}*/
 
 /*.widget.wide { grid-column: span 2; aspect-ratio: auto; }*/
 /*.widget.tall { grid-row: span 2; aspect-ratio: auto; }*/
